tdf#135709 doc import: force dynamic wrap on inline images

Wrapping is irrelevant for inline images,
so it is safe to do this in terms of writer layout.

The benefit is clearly seen when the user changes
from inline to anchored. In all other formats,
that results in Parallel wrapping, but in DOC format
the text "disappears" behind the image since it wraps through.

Change-Id: Ia4827814f9c9a3b8865bf8d0d72552b2b44a0207
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/152682
Tested-by: Jenkins
Reviewed-by: Justin Luth <jluth@mail.com>